Add reader and writer html.

--- a/COMP4537/labs/1/reader.html
+++ b/COMP4537/labs/1/reader.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
-    <title>Lab 1: JSON, Object Constructor, localStorage</title>
+    <title>Reader</title>
   </head>
   <body>
-    <h1>Lab 1: JSON, Object Constructor, localStorage</h1>
-    <h2>Oceaan Pendharkar</h2>
-    <button onclick="location.href='writer.html'">Go to Writer</button>
-    <button onclick="location.href='reader.html'">Go to Reader</button>
+    <h1>Reader</h1>
+    <div id="timestamp">Last retrieved: Never</div>
+    <div id="notes-container"></div>
+    <button onclick="location.href='index.html'">Back to Home</button>
   </body>
 </html>
