--- a/COMP4537/labs/1/writer.html
+++ b/COMP4537/labs/1/writer.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
-    <title>Lab 1: JSON, Object Constructor, localStorage</title>
+    <title>Writer</title>
   </head>
   <body>
-    <h1>Lab 1: JSON, Object Constructor, localStorage</h1>
-    <h2>Oceaan Pendharkar</h2>
-    <button onclick="location.href='writer.html'">Go to Writer</button>
-    <button onclick="location.href='reader.html'">Go to Reader</button>
+    <h1>Writer</h1>
+    <div id="timestamp">Last saved: Never</div>
+    <div id="notes-container"></div>
+    <button id="add-note">Add Note</button>
+    <button onclick="location.href='index.html'">Back to Home</button>
   </body>
 </html>
