Add comments and use OOP with writer.

--- a/COMP4537/labs/1/writer.html
+++ b/COMP4537/labs/1/writer.html
@@ -14,6 +14,7 @@
     <div id="notes-container"></div>
     <button id="add-note">Add Note</button>
     <button id="clear">Clear all notes</button>
+    <button id="save-notes">Save Notes</button>
     <button onclick="location.href='index.html'">Back to Home</button>
   </body>
 </html>
