--- a/COMP4537/labs/1/reader.html
+++ b/COMP4537/labs/1/reader.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
+    <script type="module" src="./js/reader.js" defer></script>
     <title>Reader</title>
   </head>
   <body>
     <h1>Reader</h1>
     <div id="timestamp">Last retrieved: Never</div>
-    <div id="notes-container"></div>
+    <div id="reader-container"></div>
     <button onclick="location.href='index.html'">Back to Home</button>
   </body>
 </html>
