--- a/COMP4537/labs/1/writer.html
+++ b/COMP4537/labs/1/writer.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
-    <script type="module" src="./js/script.js" defer></script>
+    <script type="module" src="./js/writer.js" defer></script>
     <title>Writer</title>
   </head>
   <body>
     <h1>Writer</h1>
-    <div id="writer-timestamp">Last saved: Never</div>
+    <div id="timestamp">Last saved: Never</div>
     <div id="notes-container"></div>
     <button id="add-note">Add Note</button>
     <button id="clear">Clear all notes</button>
