Move writer user messages to separate file.

--- a/COMP4537/labs/1/writer.html
+++ b/COMP4537/labs/1/writer.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <script type="module" src="./js/writer.js" defer></script>
-    <title>Writer</title>
+    <title></title>
   </head>
   <body>
-    <h1>Writer</h1>
-    <div id="timestamp">Last saved: Never</div>
+    <h1 id="title"></h1>
+    <div id="timestamp"></div>
     <div id="notes-container"></div>
-    <button id="add-note">Add Note</button>
-    <button id="clear">Clear all notes</button>
-    <button id="save-notes">Save Notes</button>
-    <button onclick="location.href='index.html'">Back to Home</button>
+    <button id="add-note"></button>
+    <button id="clear"></button>
+    <button id="save-notes"></button>
+    <button onclick="location.href='index.html'" id="back"></button>
   </body>
 </html>
