Move reader user messages to separate file.

--- a/COMP4537/labs/1/reader.html
+++ b/COMP4537/labs/1/reader.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <script type="module" src="./js/reader.js" defer></script>
-    <title>Reader</title>
+    <title></title>
   </head>
   <body>
-    <h1>Reader</h1>
-    <div id="timestamp">Last retrieved: Never</div>
+    <h1 id="title"></h1>
+    <div id="timestamp"></div>
     <div id="reader-container"></div>
-    <button onclick="location.href='index.html'">Back to Home</button>
+    <button onclick="location.href='index.html'" id="back"></button>
   </body>
 </html>
