--- a/COMP4537/labs/1/reader.html
+++ b/COMP4537/labs/1/reader.html
@@ -12,6 +12,6 @@
     <h1 id="title"></h1>
     <div id="timestamp"></div>
     <div id="reader-container"></div>
-    <button onclick="location.href='index.html'" id="back"></button>
+    <div id="button-container"></div>
   </body>
 </html>
