Add body to html.

--- a/COMP4537/labs/4/search.html
+++ b/COMP4537/labs/4/search.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="./css/search.css" />
     <script src="./js/search.js"></script>
   </head>
+  <body>
   <div class="container">
     <h1>Search Word</h1>
     <label for="word">Word:</label>
@@ -13,4 +14,5 @@
     <button id="submitBtn" type="submit">Submit</button>
     <p id="display"></p>
   </div>
+  </body>
 </html>
