Remove require statements.

--- a/COMP4537/labs/4/search.html
+++ b/COMP4537/labs/4/search.html
@@ -3,6 +3,7 @@
   <head>
     <title>Search Word</title>
     <link rel="stylesheet" type="text/css" href="./css/search.css" />
+    <script src="./js/endpoint.js"></script>
     <script src="./js/search.js"></script>
   </head>
   <body>
