--- a/COMP4537/labs/4/store.html
+++ b/COMP4537/labs/4/store.html
@@ -3,6 +3,7 @@
   <head>
     <title>Store Word</title>
     <link rel="stylesheet" type="text/css" href="./css/store.css" />
+    <script src="./js/endpoint.js"></script>
     <script src="./js/store.js"></script>
   </head>
   <body>
