--- a/COMP4537/labs/4/search.html
+++ b/COMP4537/labs/4/search.html
@@ -2,18 +2,18 @@
 <html>
   <head>
     <title>Search Word</title>
-    <link rel="stylesheet" type="text/css" href="./css/search.css" />
+    <link rel="stylesheet" type="text/css" href="./css/store.css" />
     <script src="./js/endpoint.js"></script>
     <script src="./js/search.js"></script>
   </head>
   <body>
-  <div class="container">
-    <h1>Search Word</h1>
-    <label for="word">Word:</label>
-    <br />
-    <input type="text" id="word" name="word" required />
-    <button id="submitBtn" type="submit">Submit</button>
-    <p id="display"></p>
-  </div>
+    <div class="container">
+      <h1>Search Word</h1>
+      <label for="word">Word:</label>
+      <br />
+      <input type="text" id="word" name="word" required />
+      <button id="submitBtn" type="submit">Submit</button>
+      <p id="display"></p>
+    </div>
   </body>
 </html>
