--- a/COMP4537/labs/4/store.html
+++ b/COMP4537/labs/4/store.html
@@ -4,7 +4,7 @@
     <title>Store Word</title>
     <link rel="stylesheet" type="text/css" href="./css/store.css" />
     <script src="./js/endpoint.js"></script>
-    <script src="./js/store.js"></script>
+    <script type="module" src="./js/store.js"></script>
   </head>
   <body>
     <div class="container">
