Move all user facing strings to en.json

--- a/COMP4537/labs/4/search.html
+++ b/COMP4537/labs/4/search.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Search Word</title>
+    <title></title>
     <link rel="stylesheet" type="text/css" href="./css/store.css" />
     <script src="./js/endpoint.js"></script>
     <script type="module" src="./js/search.js"></script>
   </head>
   <body>
     <div class="container">
-      <h1>Search Word</h1>
-      <label for="word">Word:</label>
+      <h1 id="searchWord"></h1>
+      <label for="word" id="wordText"></label>
       <br />
       <input type="text" id="word" name="word" required />
-      <button id="submitBtn" type="submit">Submit</button>
+      <button id="submitBtn" type="submit"></button>
       <p id="display"></p>
     </div>
   </body>
