--- a/COMP4537/labs/4/store.html
+++ b/COMP4537/labs/4/store.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Store Word</title>
+    <title>d</title>
     <link rel="stylesheet" type="text/css" href="./css/store.css" />
     <script src="./js/endpoint.js"></script>
     <script type="module" src="./js/store.js"></script>
   </head>
   <body>
     <div class="container">
-      <h1>Store Word</h1>
-      <label for="word">Word:</label>
+      <h1 id="storeWord"></h1>
+      <label for="word" id="wordText"></label>
       <br />
       <input type="text" id="word" name="word" required />
       <br />
-      <label for="definition">Definition:</label>
+      <label for="definition" id="definitionText"></label>
       <br />
       <input type="text" id="definition" name="definition" required />
-      <button type="submit" id="submitBtn">Submit</button>
+      <button type="submit" id="submitBtn"></button>
       <p id="display"></p>
     </div>
   </body>
